...
              key: Key('bottom_nav_home'),
              icon: Icon(Icons.home_outlined),
              activeIcon: Icon(Icons.home),
              label: 'الرئيسية',
            ),
            BottomNavigationBarItem(
              key: Key('bottom_nav_tasbih'),
              icon: Icon(Icons.fingerprint),
              activeIcon: Icon(Icons.fingerprint),
              label: 'السبحة',
            ),
            BottomNavigationBarItem(
              key: Key('bottom_nav_prayer'),
              icon: Icon(Icons.mosque_outlined),
              activeIcon: Icon(Icons.mosque),
              label: 'الصلاة',
            ),
            BottomNavigationBarItem(
              key: Key('bottom_nav_progress'),
              icon: Icon(Icons.assessment_outlined),
              activeIcon: Icon(Icons.assessment),
              label: 'تقدمي',
            ),
          ],
          currentIndex: _selectedIndex,
          onTap: _onItemTapped,
          type: BottomNavigationBarType.fixed,
          backgroundColor: theme.bottomNavigationBarTheme.backgroundColor,
...
