...
        _ref.read(messengerServiceProvider).showErrorSnackBar(failure.message);
        return false;
      },
      (_) {
        _ref
            .read(messengerServiceProvider)
            .showSuccessSnackBar('تمت الإضافة بنجاح');
        _invalidateData();
        return true;
      },
    );
  }

...
