...
          children: [
            Padding(
              padding: EdgeInsets.symmetric(
                  vertical: context.responsiveSize(8.0),
                  horizontal: context.responsiveSize(4.0)),
              child: Text(
                'أهدافي اليومية',
                style: TextStyle(
                  fontSize: context.responsiveSize(16),
                  fontWeight: FontWeight.bold,
                  color: theme.primaryColor,
                ),
              ),
...
